responsive design, bootstrap & code formatting

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -403,34 +403,35 @@ p.navbar-text {
  text-align: center; 
 }
 
-footer.clearfix {
+footer {
   position: fixed;
-  background-color: #CCCCB2;
-  text-align: center; 
-  height: 20px;
-  right: 0;
-  left: 0; 
+  height: 100px; 
   bottom: 0;
   width: 100%; 
 }
 
-/** Diseño para tabletas **/
+/* Large desktops and laptops */
+@media (min-width: 1200px) {
 
-@media only screen and (max-width: 768px){
- body {
-  margin:15px;
 }
 
-.navbar-fixed-top {
-  height: 50px;
+/* Landscape tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+
 }
 
-h3#platform-name {
-  margin-top: 15%;
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+
 }
 
-.btn-navbar {
- float: right;  
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+
 }
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+
 }
 
