--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -5,15 +5,15 @@
 </head>
 
 <body>
-	<h2 id="matching-title"><img id="match-games" src="/images/games.png" height="46" width="46">Matching Game </h2>
-	<h4 id="game_instructions">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
+	<h2 class="text-center"><img id="match-games" src="/images/games.png" height="46" width="46">Matching Game </h2>
+	<h4 class="text-center">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
 
-	<div id="matching-container">
+	<div id="container">
 		<div div="word-list">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<table>
+						<table class="table">
 						</div>
 						<div class="row">
 							<div class="col-md-6">
