--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,5 +1,5 @@
 
-<div id="teachers-header">	
+<div class="text-center">	
 	<h2 id="teachers-title"><img id="teachers" src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> <h4 id="teachers-title2">Teacher training and management of your team</h4>
 </div>
 
@@ -13,7 +13,9 @@
 
 <hr>
 
-		   <div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script> 
+<div class="embed-responsive-item">
+	<div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px"; class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script></div>
+</div>
 
 <hr>
 
