--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -6,42 +6,53 @@
 <body>
 
 	<div class ="container-fluid">
-		<div class="header-img">
-			<!--<img src="/images/background.jpg" width:"1000" height:"600" class="img-responsive" alt="Responsive image">-->
-			<div>
-				
-				<h3 id="media-title">
-					<img id="media-new" src="/images/media.png" height="46" width="46">
-					Have fun with the latest media </h3>
-					<h4 id="media-subheader">Improve your listening comprehension with our karaoke songs, podcasts and videos </h4><br> 
-				</div>
 
-				<hr>
+		<h3 class="text-center">
+			<img id="media-new" src="/images/media.png" height="46" width="46">
+			Have fun with the latest media 
+		</h3>
+		<h4 class="text-center">Improve your listening comprehension with our karaoke songs, podcasts and videos 
+		</h4><br> 
+	</div>
 
-				<div class="row">
-					<div class="col-xs-6">
-						<p> An image is worth a thousand words. You can remember many idioms when you think of a specific situation for those expressions. Check them in our playlist! </p>
-						<iframe class="embed-responsive-item" width="400" height="250" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
-					</div>
+	<hr>
 
-					<div class="col-xs-6">	
-						<p> The Show With No Name is a variety show that teaches English in a funny, practical, informative and energetic way. The programme uses pop culture and recent news. </p>
-						<iframe src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" height="440" frameborder="0" allowfullscreen="0" scrolling="no" ></iframe></div>
-					</div>
+	<div class="row">
+		<div class="col-xs-6">
 
-					<div class="col-xs-6">	<div id="spotify_container">
-						<p> Who likes to sing aloud? Let's get crazy with our favourite songs and don't forget to add new ones to our Spotify's playlist. </p>
-
-						<iframe src="https://embed.spotify.com/?uri=spotify:user:deivymc:playlist:3bSJWrbDG4rKwURqdBVmJP" width="100%" height="360" frameborder="0" allowtransparency="true"></iframe><br>
-					</div>
-				</div>
+			<p class="text-justify"> An image is worth a thousand words. You can remember many idioms when you think of a specific situation for those expressions. Check them in our playlist! 
+			</p>
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" width="400" height="250" frameborder="0" allowfullscreen>
+				</iframe>
 			</div>
-
-			
 		</div>
 
-	</body>
-	</html>
+		<div class="col-xs-6">	
+			<p class="text-justify"> The Show With No Name is a variety show that teaches English in a funny, practical, informative and energetic way. The programme uses pop culture and recent news. 
+			</p>
+			<div class="embed-responsive-item">
+				<iframe class="embed-responsive-item" src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" height="440" frameborder="0" allowfullscreen="0" scrolling="no" >
+				</iframe>
+			</div>
+		</div>
+
+		<div class="col-xs-6">	
+			<p class="text-justify"> Who likes to sing aloud? Let's get crazy with our favourite songs and don't forget to add new ones to our Spotify's playlist. 
+			</p>
+			<div class="embed-responsive-item">
+				<iframe class="embed-responsive-item" src="https://embed.spotify.com/?uri=spotify:user:deivymc:playlist:3bSJWrbDG4rKwURqdBVmJP" width="100%" height="360" frameborder="0" allowtransparency="true">
+				</iframe><br>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+</div>
+
+</body>
+</html>
 
 
 
