--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,39 +5,34 @@
 
 <body>
 	
-<span class="text-center">
-	<h2 id="student-title"><img id="student-header" src="/images/students.png" height="46" width="46"> Your Team </h2>
-</span>
+	<span class="text-center">
+		<h2 id="student-title"><img id="student-header" src="/images/students.png" height="46" width="46"> Your Team </h2>
+	</span>
 
-<hr>
+	<hr>
 
-<div class="text-center">
-	<p> 
+	<div class="container">
 		<% @students.each do |student| %>
-	<table class="table">
-		<tr>
-			<th><b><%= student.name %></b></th>
-			<td><img src="/images/students.png" height="46" width="46"></td>
-			
-			<td><b>Email:</b> <%= student.email %></td>
-			<td><b>Age:</b> <%= student.age %></td>
-			<td><b>Level:</b> <%= student.level %></td>
+		<table class="table">
+			<tr>
+				<th><b><%= student.name %></b></th>
+				<td><b>Email:</b> <%= student.email %></td>
+				<td><b>Age:</b> <%= student.age %></td>
+				<td><b>Level:</b> <%= student.level %></td>
 		<!-- Otras características que pueden ser añadidas desde el backend
 			<td>Progress: <%= student.progress %></td>
 			<td>Score: <%= student.score %></td>
 			<td>Comment: <%= student.comment %></td>
 		-->
 		<% end %> 
-		</tr>
-	</table><br>
-</div>
-	</p>
+	</tr>
+</table>
 </div>
 
 <div id="pager-edit">
 	<ul class="pager">
-	      <li><a href="/home">Back</a></li> 
-	 </ul>
+		<li><a href="/home">Back</a></li> 
+	</ul>
 
 </body>
 </html>
