--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -4,7 +4,9 @@
 </head>
 
 <body>
-  <h3 class="text-center"><img id="tools-logo" src="/images/tools.png" height="46" width="46"> Tools </h3><br>   
+  <h2 class="text-center">
+    <img id="tools-logo" src="/images/tools.png" height="46" width="46"> Tools 
+  </h2><br>   
   <h4 class="text-center">Get used to some APPs </h4>
 
   <hr>
