--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,27 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+</head>
 
+<body>
 <div class="text-center">	
-	<h2 id="teachers-title"><img id="teachers" src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> <h4 id="teachers-title2">Teacher training and management of your team</h4>
-</div>
+	<h2 id="teachers-title">
+		<img src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> 
+		<h4 id="teachers-title2">Teacher training and management of your team</h4>
+	</div>
 
-<div class="management-links">
-	<ul class="pager">
-	    <li><a href="/tutors">Team Interaction</a></li>
+	<div class="management-links">
+		<ul class="pager">
+			<li><a href="/tutors">Team Interaction</a></li>
 			<li><a href="/duolingo/dashboard">Duolingo Dashboard</a></li>
 			<li><a href="/busyteacher">Find your Worksheet</a></li>
-	<ul>
-</div>
+			<ul>
+			</div>
 
-<hr>
+			<hr>
 
-<div class="embed-responsive-item">
-	<div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px"; class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script></div>
-</div>
+			<div class="container">
+				<div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px"; class="issuuembed"></div>
+				<script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script></div>
+			</div>
 
-<hr>
+			<hr>
 
-<div id="pager-edit">
-	<ul class="pager">
-	      <li><a href="/home">Back</a></li> 
-	 </ul>
-</div>
-
+			<div id="pager-edit">
+				<ul class="pager">
+					<li><a href="/home">Back</a></li> 
+				</ul>
+			</div>
+</body>
+</html>
